changes endpoint /api/exchange-rates/latest